# glad

./: glad.sh  meson.build  meson_options.txt
